--- a/workspace.html
+++ b/workspace.html
@@ -12,7 +12,7 @@
     --bg1:#f0f6ff; --bg2:#e1edff; --ink:#0b1a33; --muted:#4b6078;
     --card:#fff; --line:#d5e3f7; --brand:#0a66c2; --brand-d:#084a91;
     --lane:#eef5ff; --shadow:0 12px 34px rgba(10,102,194,.12);
-    --coach-summary-width:200px;
+    --coach-summary-width:28px;
   }
   *{box-sizing:border-box}
   body{margin:0;font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(120deg,var(--bg1),var(--bg2));color:var(--ink)}
@@ -163,26 +163,16 @@
   .coach-icon-btn:hover{background:#edf4ff}
   .coach-tips{margin:0;padding-left:18px;display:flex;flex-direction:column;gap:6px;color:#2c4f80;font-size:13px}
   .coach-footer{text-align:center;font-size:11px;color:#4a6ba3;padding-bottom:10px;display:flex;flex-direction:column;gap:4px}
-  .coach-summary{position:fixed;left:0;top:var(--topbar-height);width:var(--coach-summary-width);height:calc(100vh - var(--topbar-height));z-index:34;display:flex;align-items:stretch;gap:8px;padding:12px 12px 12px 16px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
+  .coach-summary{position:fixed;left:0;top:var(--topbar-height);width:var(--coach-summary-width);height:calc(100vh - var(--topbar-height));z-index:34;display:flex;align-items:center;justify-content:center;padding:0;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow:hidden;transition:box-shadow .2s ease,opacity .2s ease,background .2s ease}
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
-  .coach-summary-body{display:flex;flex:1;flex-direction:column;justify-content:space-between;gap:16px;color:#1f4f94;font-size:11px;line-height:1.3;min-width:0}
-  .coach-summary-title{margin:0;font-size:12px;font-weight:700;color:#0f3e7c;letter-spacing:.4px;text-transform:uppercase}
-  .coach-summary-row{display:flex;align-items:center;justify-content:space-between;gap:10px}
-  .coach-summary-label{display:inline-flex;align-items:center;gap:6px;text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:10px;white-space:nowrap}
-  .coach-summary-icon{width:20px;height:20px;border-radius:50%;background:#e6f1ff;display:inline-flex;align-items:center;justify-content:center;font-size:11px;box-shadow:inset 0 0 0 1px rgba(10,102,194,.1)}
-  .coach-summary-text{transition:opacity .2s ease}
-  .coach-summary-chip{display:inline-flex;align-items:center;justify-content:center;gap:4px;padding:4px 10px;border-radius:999px;background:#edf4ff;border:1px solid #c8d9f4;color:#0f3e7c;font-weight:600;font-size:11px;white-space:nowrap;min-width:48px}
-  .coach-summary:not(.coach-open) .coach-summary-text{display:none}
-  .coach-summary:not(.coach-open) .coach-summary-row{gap:6px}
-  .coach-summary:not(.coach-open) .coach-summary-chip{min-width:42px;padding:4px 8px}
-  .coach-summary-chip.is-muted{color:#2c4f80;font-weight:500}
-  .coach-summary-toggle{margin-left:auto;background:var(--brand);color:#fff;border:0;border-radius:999px;width:30px;height:30px;display:grid;place-items:center;cursor:pointer;box-shadow:0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,transform .2s ease;flex-shrink:0}
-  .coach-summary-toggle:hover{background:var(--brand-d)}
-  .coach-summary.coach-open .coach-summary-toggle{background:#1b4f8f}
-  .coach-summary-chevron{font-size:18px;transition:transform .2s ease}
-  .coach-summary.coach-open .coach-summary-chevron{transform:rotate(180deg)}
+  .coach-summary.coach-open{opacity:0;pointer-events:none;box-shadow:none;background:transparent}
+  .coach-summary-toggle{width:100%;height:100%;background:linear-gradient(180deg,#0a66c2,#084a91);color:#fff;border:0;border-radius:0;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:inset -1px 0 0 rgba(255,255,255,.25),0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,box-shadow .2s ease}
+  .coach-summary-toggle:hover,.coach-summary-toggle:focus-visible{background:linear-gradient(180deg,#0d7ae0,#0a5ab3);box-shadow:inset -1px 0 0 rgba(255,255,255,.3),0 8px 18px rgba(10,102,194,.28)}
+  .coach-summary-toggle:focus-visible{outline:2px solid #0d7ae0;outline-offset:0}
+  .coach-summary.coach-open .coach-summary-toggle{display:none}
+  .coach-summary-chevron{font-size:20px;font-weight:700;line-height:1;text-shadow:0 1px 0 rgba(0,0,0,.25)}
   .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
-  @media (max-width: 960px){:root{--coach-summary-width:180px}.coach-summary{padding:10px 12px}}
+  @media (max-width: 960px){:root{--coach-summary-width:28px}.coach-summary{padding:0}}
   .app.coach-open{margin-left:300px;padding-left:0}
   .coach-inner::-webkit-scrollbar{width:6px}
   .coach-inner::-webkit-scrollbar-thumb{background:rgba(10,102,194,.35);border-radius:999px}
@@ -194,60 +184,9 @@
 <body>
 <div class="app">
   <aside class="coach-summary" id="coachSummary" role="complementary" aria-label="Sprint coach summary">
-    <div class="coach-summary-body" id="coachSummaryBody" role="status" aria-live="polite" aria-atomic="true">
-      <p class="coach-summary-title">Sprint Snapshot</p>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryProgressLabel">Progress</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">📈</span>
-          <span class="coach-summary-text">Progress</span>
-        </span>
-        <span class="coach-summary-chip" id="coachSummaryProgressValue" aria-labelledby="coachSummaryProgressLabel">0 / 0</span>
-      </div>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryStreakLabel">Streak</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">🔥</span>
-          <span class="coach-summary-text">Streak</span>
-        </span>
-        <span class="coach-summary-chip is-muted" id="coachSummaryProgressNote" aria-labelledby="coachSummaryStreakLabel">0 days</span>
-      </div>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryInsightLabel">Insight</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">💡</span>
-          <span class="coach-summary-text">Insight</span>
-        </span>
-        <span class="coach-summary-chip" id="coachSummaryInsight" aria-labelledby="coachSummaryInsightLabel">Pending</span>
-      </div>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryResumeLabel">Resume score</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">📄</span>
-          <span class="coach-summary-text">Resume</span>
-        </span>
-        <span class="coach-summary-chip" id="coachSummaryResume" aria-labelledby="coachSummaryResumeLabel">--</span>
-      </div>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryJDFitLabel">Job description fit score</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">🎯</span>
-          <span class="coach-summary-text">JD Fit</span>
-        </span>
-        <span class="coach-summary-chip" id="coachSummaryJDFit" aria-labelledby="coachSummaryJDFitLabel">--</span>
-      </div>
-      <div class="coach-summary-row">
-        <span class="sr-only" id="coachSummaryTipLabel">Tip</span>
-        <span class="coach-summary-label" aria-hidden="true">
-          <span class="coach-summary-icon" aria-hidden="true">📝</span>
-          <span class="coach-summary-text">Tip</span>
-        </span>
-        <span class="coach-summary-chip is-muted" id="coachSummaryTip" aria-labelledby="coachSummaryTipLabel">Loading</span>
-      </div>
-    </div>
     <button class="coach-summary-toggle" id="coachSummaryToggle" type="button" aria-controls="sprintCoachPanel" aria-expanded="false" aria-label="Open Sprint Coach">
       <span class="sr-only">Open Sprint Coach</span>
-      <span class="coach-summary-chevron" aria-hidden="true">›</span>
+      <span class="coach-summary-chevron" aria-hidden="true">»</span>
     </button>
   </aside>
   <aside class="sprint-coach" id="sprintCoachPanel" aria-hidden="true">
