--- a/workspace.html
+++ b/workspace.html
@@ -47,14 +47,47 @@
   .btn.ghost{background:#fff;border:1px solid #c8d9f4;color:#0f3e7c}
 
   /* Board */
-  .board{max-width:1200px;margin:14px auto;padding:0 16px 40px;display:grid;grid-template-columns:repeat(6,minmax(0,1fr));gap:14px}
-  .lane{background:rgba(255,255,255,.88);border:1px solid #c8d9f4;border-radius:16px;min-height:320px;display:flex;flex-direction:column}
-  .lanehead{padding:12px 12px 10px;border-bottom:1px solid #d7e6ff;display:flex;flex-direction:column;gap:6px;min-height:148px}
-  .lanehead-top{display:flex;align-items:center;justify-content:space-between;gap:10px}
-  .lanehead h3{margin:0;font-size:16px}
-  .lane-desc{margin:6px 0 0;font-size:12px;color:#9f9f9f;line-height:1.4}
+  .board{
+    --lane-gap:18px;
+    --lanes-visible:3;
+    --lane-peek:.5;
+    --lane-width:calc((100% - (var(--lanes-visible) * var(--lane-gap))) / (var(--lanes-visible) + var(--lane-peek)));
+    max-width:1200px;
+    margin:14px auto;
+    padding:0 16px 40px;
+    display:flex;
+    gap:var(--lane-gap);
+    align-items:stretch;
+    overflow-x:auto;
+    scroll-snap-type:x proximity;
+    scroll-padding:0 16px;
+    scrollbar-width:thin;
+    scrollbar-color:rgba(15,62,124,.28) rgba(15,62,124,.08);
+  }
+  .board::-webkit-scrollbar{height:8px}
+  .board::-webkit-scrollbar-thumb{background:rgba(15,62,124,.28);border-radius:999px}
+  .board::-webkit-scrollbar-track{background:rgba(15,62,124,.08);border-radius:999px}
+  .lane{
+    background:rgba(255,255,255,.92);
+    border:1px solid #c8d9f4;
+    border-radius:18px;
+    min-height:360px;
+    display:flex;
+    flex-direction:column;
+    flex:0 0 var(--lane-width);
+    min-width:var(--lane-width);
+    scroll-snap-align:start;
+    box-shadow:0 18px 36px rgba(10,102,194,.12);
+  }
+  .lanehead{padding:16px 16px 12px;border-bottom:1px solid #d7e6ff;display:flex;flex-direction:column;gap:8px;min-height:152px}
+  .lanehead-top{display:flex;align-items:center;justify-content:space-between;gap:12px}
+  .lanehead h3{margin:0;font-size:17px}
+  .lane-desc{margin:4px 0 0;font-size:12px;color:#627ba3;line-height:1.5}
+  .lane-actions{padding:12px 16px 0;display:flex;flex-direction:column;gap:10px}
+  .lane-add{width:100%;justify-content:center;font-size:15px;padding:12px 16px;box-shadow:0 12px 24px rgba(10,102,194,.16)}
+  .lane-add:hover{box-shadow:0 16px 32px rgba(10,102,194,.2)}
   .count{font-size:12px;color:#2f4f86;background:#edf4ff;border:1px solid #c8d9f4;border-radius:999px;padding:2px 8px}
-  .cards{flex:1;padding:10px;display:grid;gap:10px}
+  .cards{flex:1;padding:14px;display:grid;gap:12px}
   .card{
     position:relative;background:#fff7c2;border:1px solid rgba(225,190,0,.4);border-radius:8px;padding:14px;
     box-shadow:0 18px 22px -18px rgba(137,111,0,.8),0 10px 20px rgba(247,223,124,.45);
@@ -177,8 +210,10 @@
   .coach-inner::-webkit-scrollbar{width:6px}
   .coach-inner::-webkit-scrollbar-thumb{background:rgba(10,102,194,.35);border-radius:999px}
   @media (max-width: 960px){.app.coach-open{margin-left:0}.sprint-coach{width:min(320px,85vw)}.coach-grid{grid-template-columns:1fr}}
-  @media (max-width: 980px){ .board{grid-template-columns:1fr 1fr} }
-  @media (max-width: 640px){ .board{grid-template-columns:1fr} .row{grid-template-columns:1fr} .pill{display:none} }
+  @media (max-width: 1100px){.board{max-width:100%;}}
+  @media (max-width: 1024px){.board{--lanes-visible:2;--lane-gap:16px;scroll-padding:0 14px}}
+  @media (max-width: 768px){.board{--lane-gap:14px}}
+  @media (max-width: 640px){.board{--lanes-visible:1;--lane-gap:12px;padding-left:12px;padding-right:12px;scroll-padding:0 12px}.row{grid-template-columns:1fr}.pill{display:none}.lane{min-height:320px}.lane-add{font-size:14px;padding:11px 14px}}
 </style>
 </head>
 <body>
@@ -266,7 +301,6 @@
   <div class="head">
     <div class="stat">Today’s applications: <strong id="todayCount">0</strong></div>
     <div class="stat">This week: <strong id="weekCount">0</strong></div>
-    <button class="btn" id="addBtn">+ Add Application</button>
     <button class="btn ghost" id="resetBtn">Reset board</button>
   </div>
 
@@ -276,6 +310,9 @@
       <div class="lanehead">
         <div class="lanehead-top"><h3>Research / To Apply</h3><span class="count" data-count="research">0</span></div>
         <p class="lane-desc">Track roles you&rsquo;re exploring, prepping, or yet to apply for.</p>
+      </div>
+      <div class="lane-actions">
+        <button class="btn lane-add" id="addBtn" type="button">+ Add Application</button>
       </div>
       <div class="cards" data-drop="research"></div>
       <div class="empty">Drag Applications here</div>
