--- a/workspace.html
+++ b/workspace.html
@@ -89,26 +89,26 @@
   .count{font-size:12px;color:#2f4f86;background:#edf4ff;border:1px solid #c8d9f4;border-radius:999px;padding:2px 8px}
   .cards{flex:1;padding:14px;display:grid;gap:12px}
   .card{
-    position:relative;background:#fff7c2;border:1px solid rgba(225,190,0,.4);border-radius:8px;padding:14px;
-    box-shadow:0 18px 22px -18px rgba(137,111,0,.8),0 10px 20px rgba(247,223,124,.45);
-    cursor:grab;display:flex;flex-direction:column;gap:8px;
-    transform:rotate(-0.8deg) skew(-0.4deg);transition:transform .2s ease;
+    position:relative;
+    background:var(--card);
+    border:1px solid #d5e3f7;
+    border-radius:12px;
+    padding:14px;
+    box-shadow:var(--shadow);
+    cursor:grab;
+    display:flex;
+    flex-direction:column;
+    gap:8px;
+    transition:transform .2s ease,box-shadow .2s ease;
   }
-  .card:nth-child(2n){transform:rotate(.9deg) skew(.3deg)}
-  .card:nth-child(3n){transform:rotate(-1.2deg) skew(.2deg)}
-  .card:hover{transform:rotate(0deg) skew(0deg) translateY(-2px)}
-  .card::before{
-    content:"";position:absolute;top:-10px;left:12px;width:48px;height:22px;background:linear-gradient(135deg,#f3e289,#fdf5c4);
-    box-shadow:0 4px 6px rgba(0,0,0,.1);border-radius:4px 4px 2px 2px;
-    transform:rotate(-2deg);opacity:.8;pointer-events:none;
-  }
-  .card strong{font-weight:600;color:#3a2d00}
-  .card small{color:#6a5a1f}
-  .card-header{font-size:14px;line-height:1.4;color:#2d2100}
-  .card-role{color:#4a3600;font-size:13px;font-weight:600}
+  .card:hover{transform:translateY(-2px);box-shadow:0 20px 36px rgba(10,102,194,.16)}
+  .card strong{font-weight:600;color:var(--ink)}
+  .card small{color:var(--muted)}
+  .card-header{font-size:14px;line-height:1.4;color:var(--ink)}
+  .card-role{color:#0f3e7c;font-size:13px;font-weight:600}
   .card-badges{display:flex;flex-wrap:wrap;gap:6px}
-  .card-badge{background:#ffeaa0;border:1px solid rgba(180,145,0,.3);border-radius:999px;padding:2px 8px;font-size:11px;color:#2c1f00;white-space:nowrap}
-  .card-badge.more{background:#ffd866;color:#2d2100;font-weight:700}
+  .card-badge{background:var(--brand-soft);border:1px solid #c8d9f4;border-radius:999px;padding:2px 8px;font-size:11px;color:#0f3e7c;white-space:nowrap}
+  .card-badge.more{background:#0f3e7c;color:#fff;font-weight:700;border-color:#0f3e7c}
   .empty{flex:1;display:grid;place-items:center;color:#385b8a;font-size:13px;padding:18px}
 
   /* Modal */
